・全てのシートのカーソルを左上に　マクロのショートカットを {Ctrl+M,1} に設定（設定ファイル）

--- a/Surviveplus.config
+++ b/Surviveplus.config
@@ -16,6 +16,7 @@
 		</shortcutCategory>
 		<shortcutCategory key="^m" name="Surviveplus.xla!ショートカットメニューを表示する">
 			<shortcutMacro key="F" name="ワークブックのフォルダを開く" sub="Surviveplus.xla!アクティブワークブックのフォルダを開く" />
+			<shortcutMacro key="1" name="全てのシートのカーソルを左上に" sub="Surviveplus.xla!全てのシートのカーソルを左上に" />
 		</shortcutCategory>
 	</shortcuts>
 </settings>
