・アウトラインの展開・縮小 マクロを追加。 ・全画面表示を 直接ショートカット から 2段階に変更（設定ファイル）。

--- a/Surviveplus.config
+++ b/Surviveplus.config
@@ -4,7 +4,6 @@
 	<version>1.0</version>
 	<shortcuts>
 		<shortcutCategory key="{Direct}" >
-			<shortcutMacro key="{F4}" sub="Surviveplus.xla!全画面表示" />
 			<shortcutMacro key="{F1}" sub="Surviveplus.xla!参照形式切替" />
 			<shortcutMacro key="^+%i" sub="Surviveplus.xla!数値インクリメント挿入" />
 			<shortcutMacro key="^+i" sub="Surviveplus.xla!末尾の数値をインクリメント" />
@@ -13,10 +12,13 @@
 			<shortcutMacro key="+^o" sub="Surviveplus.xla!等幅フォントに変更" />
 			<shortcutMacro key="+^p" sub="Surviveplus.xla!プロポーショナルフォントに変更" />
 			<shortcutMacro key="^+%-" sub="Surviveplus.xla!中央の横線を消す" />
+			<shortcutMacro key="^+_" name="アウトライン行の展開/縮小" sub="Surviveplus.xla!アウトライン行の展開縮小" />
 		</shortcutCategory>
 		<shortcutCategory key="^m" name="Surviveplus.xla!ショートカットメニューを表示する">
+			<shortcutMacro key="F4" name="全画面表示" sub="Surviveplus.xla!全画面表示" />
 			<shortcutMacro key="F" name="ワークブックのフォルダを開く" sub="Surviveplus.xla!アクティブワークブックのフォルダを開く" />
 			<shortcutMacro key="1" name="全てのシートのカーソルを左上に" sub="Surviveplus.xla!全てのシートのカーソルを左上に" />
+			<shortcutMacro key="M" name="アウトライン行の展開/縮小" sub="Surviveplus.xla!アウトライン行の展開縮小" />
 		</shortcutCategory>
 	</shortcuts>
 </settings>
