・ 選択範囲の値を連結してコピー を追加。

--- a/Surviveplus.config
+++ b/Surviveplus.config
@@ -19,6 +19,7 @@
 			<shortcutMacro key="F" name="ワークブックのフォルダを開く" sub="Surviveplus.xla!アクティブワークブックのフォルダを開く" />
 			<shortcutMacro key="1" name="全てのシートのカーソルを左上に" sub="Surviveplus.xla!全てのシートのカーソルを左上に" />
 			<shortcutMacro key="M" name="アウトライン行の展開/縮小" sub="Surviveplus.xla!アウトライン行の展開縮小" />
+			<shortcutMacro key="C" name="選択範囲の値を連結してコピー" sub="Surviveplus.xla!選択範囲の値を連結してコピー" />
 		</shortcutCategory>
 	</shortcuts>
 </settings>
