--- a/Surviveplus.config
+++ b/Surviveplus.config
@@ -20,6 +20,7 @@
 			<shortcutMacro key="1" name="全てのシートのカーソルを左上に" sub="Surviveplus.xla!全てのシートのカーソルを左上に" />
 			<shortcutMacro key="M" name="アウトライン行の展開/縮小" sub="Surviveplus.xla!アウトライン行の展開縮小" />
 			<shortcutMacro key="C" name="選択範囲の値を連結してコピー" sub="Surviveplus.xla!選択範囲の値を連結してコピー" />
+			<shortcutMacro key="S" name="ワークシートの名称を置換" sub="Surviveplus.xla!ワークシートの名称を置換" />
 		</shortcutCategory>
 	</shortcuts>
 </settings>
