* 選択された範囲の名前を取得する マクロの既定のショートカットを設定。

--- a/Surviveplus.config
+++ b/Surviveplus.config
@@ -21,6 +21,7 @@
 			<shortcutMacro key="M" name="アウトライン行の展開/縮小" sub="Surviveplus.xla!アウトライン行の展開縮小" />
 			<shortcutMacro key="C" name="選択範囲の値を連結してコピー" sub="Surviveplus.xla!選択範囲の値を連結してコピー" />
 			<shortcutMacro key="S" name="ワークシートの名称を置換" sub="Surviveplus.xla!ワークシートの名称を置換" />
+			<shortcutMacro key="N" name="選択された範囲の名前を取得する" sub="Surviveplus.xla!選択された範囲の名前を取得する" />
 		</shortcutCategory>
 	</shortcuts>
 </settings>
