* 選択された範囲の値を取得する（1行に１つずつコピーする）マクロを追加。

--- a/Surviveplus.config
+++ b/Surviveplus.config
@@ -22,6 +22,7 @@
 			<shortcutMacro key="C" name="選択範囲の値を連結してコピー" sub="Surviveplus.xla!選択範囲の値を連結してコピー" />
 			<shortcutMacro key="S" name="ワークシートの名称を置換" sub="Surviveplus.xla!ワークシートの名称を置換" />
 			<shortcutMacro key="N" name="選択された範囲の名前を取得する" sub="Surviveplus.xla!選択された範囲の名前を取得する" />
+			<shortcutMacro key="D" name="選択された範囲の値を取得する" sub="Surviveplus.xla!選択された範囲の値を取得する" />
 		</shortcutCategory>
 	</shortcuts>
 </settings>
