--- a/Surviveplus.config
+++ b/Surviveplus.config
@@ -23,6 +23,7 @@
 			<shortcutMacro key="S" name="ワークシートの名称を置換" sub="Surviveplus.xla!ワークシートの名称を置換" />
 			<shortcutMacro key="N" name="選択された範囲の名前を取得する" sub="Surviveplus.xla!選択された範囲の名前を取得する" />
 			<shortcutMacro key="D" name="選択された範囲の値を取得する" sub="Surviveplus.xla!選択された範囲の値を取得する" />
+			<shortcutMacro key="J" name="選択された範囲に名前として貼り付ける" sub="選択された範囲に名前として貼り付ける" />
 		</shortcutCategory>
 	</shortcuts>
 </settings>
