* ワークシートを複数コピーする の既定のショートカットを追加。

--- a/Surviveplus.config
+++ b/Surviveplus.config
@@ -24,6 +24,7 @@
 			<shortcutMacro key="N" name="選択された範囲の名前を取得する" sub="Surviveplus.xla!選択された範囲の名前を取得する" />
 			<shortcutMacro key="D" name="選択された範囲の値を取得する" sub="Surviveplus.xla!選択された範囲の値を取得する" />
 			<shortcutMacro key="J" name="選択された範囲に名前として貼り付ける" sub="選択された範囲に名前として貼り付ける" />
+			<shortcutMacro key="T" name="ワークシートを複数コピーする" sub="Surviveplus.xla!ワークシートを複数コピーする" />
 		</shortcutCategory>
 	</shortcuts>
 </settings>
