* テキストとしてコピーを追加。

--- a/Surviveplus.config
+++ b/Surviveplus.config
@@ -8,6 +8,7 @@
 			<shortcutMacro key="^+%i" sub="Surviveplus.xla!数値インクリメント挿入" />
 			<shortcutMacro key="^+i" sub="Surviveplus.xla!末尾の数値をインクリメント" />
 			<shortcutMacro key="^+v" sub="Surviveplus.xla!値の貼り付け" />
+			<shortcutMacro key="^+c" sub="Surviveplus.xla!テキストとしてコピー" />
 			<shortcutMacro key="+^t" sub="Surviveplus.xla!セル結合" />
 			<shortcutMacro key="+^o" sub="Surviveplus.xla!等幅フォントに変更" />
 			<shortcutMacro key="+^p" sub="Surviveplus.xla!プロポーショナルフォントに変更" />
