* 常に手前に表示 のキー設定を追加。

--- a/Surviveplus.config
+++ b/Surviveplus.config
@@ -16,6 +16,7 @@
 			<shortcutMacro key="^+_" name="アウトライン行の展開/縮小" sub="Surviveplus.xla!アウトライン行の展開縮小" />
 		</shortcutCategory>
 		<shortcutCategory key="^m" name="Surviveplus.xla!ショートカットメニューを表示する">
+			<shortcutMacro key="F11" name="常に手前に表示" sub="Surviveplus.xla!常に手前に表示" />
 			<shortcutMacro key="F4" name="全画面表示" sub="Surviveplus.xla!全画面表示" />
 			<shortcutMacro key="F" name="ワークブックのフォルダを開く" sub="Surviveplus.xla!アクティブワークブックのフォルダを開く" />
 			<shortcutMacro key="1" name="全てのシートのカーソルを左上に" sub="Surviveplus.xla!全てのシートのカーソルを左上に" />
